fix TradeChart z-index

--- a/src/TradeChart/style.scss
+++ b/src/TradeChart/style.scss
@@ -1,3 +1,7 @@
+.hydro-sdk-TradeChart {
+    z-index: 0;
+}
+
 .chartSelection {
     display: flex;
     justify-content: flex-start;
